opt/cert-manager/kuard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - www.klovercloud.com
    secretName: kuard-tls
  rules:
  - host: www.klovercloud.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
